objects/Group_Plan_Design__c.object
<CustomObject>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Legal Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Group Plan Designs</relationshipLabel>
        <relationshipName>Group_Plan_Designs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alphanumeric_Prefix_Network_ID__c</fullName>
        <formula>QuoteLineItem_Record_ID__r.Alphanumeric_Prefix_Network__r.Name</formula>
        <label>Alphanumeric Prefix Network</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Prefix_APN__c</fullName>
        <formula>QuoteLineItem_Record_ID__r.Alphanumeric_Prefix_Network__r.Assigned_Prefix__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value Is Derived From The Alphanumeric Prefix Network (APN) Record Associated To The Quote Line Item (QLI) Record. To Display Or Update This Value Ensure The Correct APN Record Is Captured On The QLI Configuration/Page.</inlineHelpText>
        <label>Assigned Prefix (APN)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Arrangement_Record_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Arrangement</label>
        <referenceTo>Billing_Arrangement_Local__c</referenceTo>
        <relationshipLabel>Group Plan Designs</relationshipLabel>
        <relationshipName>Group_Plan_Designs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bytes_1_And_2_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Group Plan Description</inlineHelpText>
        <label>Bytes 1 And 2 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bytes_1_And_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Group Plan Bytes</inlineHelpText>
        <label>Bytes 1 And 2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBP_Bill_Group_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Populated via API response from Customer Master</inlineHelpText>
        <label>CBP Bill Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <formula>TEXT(Group__r.ClaimSystem__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the claim system of the Group that is linked to this GPD</inlineHelpText>
        <label>Claim System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Code__c</fullName>
        <formula>QuoteLineItem_Record_ID__r.Contract_Codes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Category__c</fullName>
        <label>Employee Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Employee_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Class_Name__c</fullName>
        <formula>Employee_Class_Record_ID__r.Employee_Class_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Class Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Class_Record_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Class</label>
        <referenceTo>Employee_Class__c</referenceTo>
        <relationshipLabel>Group Plan Designs</relationshipLabel>
        <relationshipName>Group_Plan_Designs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee_Status_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employee Status Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Status</label>
        <referenceTo>Employee_Status__c</referenceTo>
        <relationshipLabel>Group Plan Designs</relationshipLabel>
        <relationshipName>Group_Plan_Designs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Funding Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>Employee_Status__r.Location__r.Group__r.Name</formula>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Plan_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is the requested name at the group suffix level. It is required if they don’t want to go with a default suffix. If blank then defaults will be applied.</inlineHelpText>
        <label>Group Plan Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Suffix_Alpha_Prefix__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Suffix Alpha Prefix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Suffix_Cancel_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Suffix Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Suffix_Claims_Route_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Suffix Claims Route Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Suffix_Contract_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Suffix Contract Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Suffix_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Suffix Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Suffix_Is_Active__c</fullName>
        <formula>(ISBLANK(Group_Suffix_Cancel_Date__c ))||(Group_Suffix_Cancel_Date__c  &gt;= TODAY() )</formula>
        <label>Group Suffix Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Suffix_New__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked If Latest Upload Indicated As New</inlineHelpText>
        <label>Group Suffix New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Suffix_Removed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used For When This Record Was Created But Then Per Change (e.g. Client Decision) Was Removed Before Ever Being Effective</description>
        <inlineHelpText>Used For When This Record Was Created But Then Per Change (e.g. Client Decision) Was Removed Before Ever Being Effective</inlineHelpText>
        <label>Group Suffix Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Suffix__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Four Byte Group Suffix</inlineHelpText>
        <label>Group Suffix</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Group Plan Designs</relationshipLabel>
        <relationshipName>Group_Plan_Designs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_and_GPD_Suffix__c</fullName>
        <formula>Group__r.Name + Group_Suffix__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group and GPD Suffix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Most Recent Usage On Implementation Case</inlineHelpText>
        <label>Implementation Case</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Group Plan Designs</relationshipLabel>
        <relationshipName>Group_Plan_Designs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Id__c</fullName>
        <formula>Billing_Arrangement_Record_ID__r.Invoice_Record_ID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Life_and_Disability_Class_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Life and Disability Class Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Or_Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location Or Division</label>
        <referenceTo>Location_Or_Division__c</referenceTo>
        <relationshipLabel>Group Plan Designs</relationshipLabel>
        <relationshipName>Group_Plan_Designs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Original Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <formula>QuoteLineItem_Record_ID__r.ProductName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_State_UW_State_code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan State/UW State code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_or_Product_Name__c</fullName>
        <formula>QuoteLineItem_Record_ID__r.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan or Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>CASESAFEID(QuoteLineItem_Record_ID__r.Product2Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QLI_Funding__c</fullName>
        <formula>TEXT( QuoteLineItem_Record_ID__r.Funding__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QLI Funding</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QLI_Plan_Contract_Code__c</fullName>
        <formula>QuoteLineItem_Record_ID__r.Contract_Code_ASF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QLI Plan Contract Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteLineItem_Record_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Group Plan Designs</relationshipLabel>
        <relationshipName>Group_Plan_Designs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <description>This field is being added to support the Group Load functionality through Customer Master.</description>
        <inlineHelpText>This field is required for L&amp;D. User enters the value and this is not auto generated. This creates the group suffix. This number must match with the SRQ number.</inlineHelpText>
        <label>Sequence Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Cobra</fullName>
                </value>
                <value>
                    <fullName>Cal Cobra</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Group_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sub Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix_Contract_Code__c</fullName>
        <formula>Group_Suffix__c +  QuoteLineItem_Record_ID__r.vlocity_ins__ContractCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suffix Contract Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix_Source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Suffix Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Group Plan Design</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GPD-{000000}</displayFormat>
        <label>Group Plan Design Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Plan Designs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>